# GPX-racer

./: AGENTS.md  Dockerfile  README.md  app.py  f.txt  pyproject.toml  run.sh
gpx_files/: Glorius_20_April.gpx  Glorius_Oct_18th.gpx
gpx_racer/: __init__.py  route_utils.py
pages/: 1_Race_Map.py
scripts/: run_local.sh
tests/: test_route_utils.py
