[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpx-racer"
version = "0.1.0"
description = "Race 2 uploaded GPX files on a map"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "gpxpy>=1.6.2",
    "streamlit>=1.41.0",
    "streamlit-folium>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
include = ["gpx_racer*"]
